# AutoHeuristic

./: CMakeLists.txt  README.md  main.cpp
include/: file_utils.h  gui.h  mask_utils.h
src/: file_utils.cpp  gui.cpp  mask_utils.cpp
src/gui_histogram/: gui_histogram.cpp  gui_histogram.h
src/gui_platform/: gui_platform.cpp
